--- a/Ki4C_Solution/appsettings.json
+++ b/Ki4C_Solution/appsettings.json
@@ -1,6 +1,6 @@
 {
   "AppSettings": {
-    "Token": "this is custom Secret key for authentication"
+    "Token": "this is Ki4C custom Secret key for authentication"
   },
   "Logging": {
     "LogLevel": {
