--- a/DBManager/DBManager.csproj
+++ b/DBManager/DBManager.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="SoftBand.EntityManager" Version="1.2.1" />
+  </ItemGroup>
+
 </Project>
